checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000015227.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:TYPO_SPELLING: 'folliwing' may be misspelled - perhaps 'following'?
#27: 
This patch fixes the folliwing compile error with CONFIG_BUG=n:
                     ^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#35: 
/home/bunk/linux/kernel-2.6/linux-2.6.19-rc6-mm1/include/linux/bug.h:38: warning: type defaults to 'int' in declaration of 'Elf_Ehdr'

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#36: 
/home/bunk/linux/kernel-2.6/linux-2.6.19-rc6-mm1/include/linux/bug.h:38: error: expected ';', ',' or ')' before '*' token

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000015227.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 0 errors, 3 warnings, 0 checks, 14 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000015227.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
